tests/algorithms/transpiler/Zig/data_structures/kd_tree/tests/test_kdtree.error
exit status 1
/workspace/mochi/tests/algorithms/transpiler/Zig/data_structures/kd_tree/tests/test_kdtree.zig:37:34: error: unused function parameter